WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143423
[Mac] Spins seen in WKSetApplicationInformationItem, so it should not be called on the main thread
https://bugs.webkit.org/show_bug.cgi?id=143423
Summary
[Mac] Spins seen in WKSetApplicationInformationItem, so it should not be call...
Darin Adler
Reported
2015-04-05 14:12:09 PDT
[Mac] Spins seen in WKSetApplicationInformationItem, so it should not be called on the main thread
Attachments
Patch
(4.23 KB, patch)
2015-04-05 14:24 PDT
,
Darin Adler
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2015-04-05 14:24:30 PDT
Created
attachment 250167
[details]
Patch
Alexey Proskuryakov
Comment 2
2015-04-05 15:14:08 PDT
Comment on
attachment 250167
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=250167&action=review
r=me assuming that there is a reason to believe that WKSetApplicationInformationItem can be used from a secondary thread.
> Source/WebKit2/WebProcess/cocoa/WebProcessCocoa.mm:270 > +#if USE(APPKIT)
We should probably use PLATFORM(MAC) now, as USE(APPKIT) is just a more confusing way to say the same.
> Source/WebKit2/WebProcess/cocoa/WebProcessCocoa.mm:304 > + WKSetApplicationInformationItem(CFSTR("LSActivePageUserVisibleOriginsKey"), activePageURLs.get());
Is this function documented to be usable from a secondary thread? It doesn't seem obvious that it would be safe - there is waiting for an IPC response, and dealing with app global data structures here.
Darin Adler
Comment 3
2015-04-05 15:22:19 PDT
(In reply to
comment #2
)
> Is this function documented to be usable from a secondary thread?
Yes. It says "Mac OS X threading: Thread safe" in the header.
Darin Adler
Comment 4
2015-04-05 15:23:26 PDT
Comment on
attachment 250167
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=250167&action=review
>> Source/WebKit2/WebProcess/cocoa/WebProcessCocoa.mm:270 >> +#if USE(APPKIT) > > We should probably use PLATFORM(MAC) now, as USE(APPKIT) is just a more confusing way to say the same.
I’m not sure what changed from when we first wrote the code, but I’ll do it. I think USE(APPKIT) is better than PLATFORM(MAC) when we are actually talking about AppKit, but I suppose WKSetApplicationInformationItem is hardly AppKit.
Darin Adler
Comment 5
2015-04-05 15:25:18 PDT
Committed
r182366
: <
http://trac.webkit.org/changeset/182366
>
mitz
Comment 6
2015-04-05 15:25:54 PDT
rdar://problem/18773785
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug