[Mac] Spins seen in WKSetApplicationInformationItem, so it should not be called on the main thread https://bugs.webkit.org/show_bug.cgi?id=143423 rdar://problem/18773785

Reviewed by Alexey Proskuryakov.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::origin): Factored out this helper function from updateActivePages below, so
the function below is easier to read.
(WebKit::WebProcess::updateActivePages): Refactored to use the new origin function.
Use dispatch_async to call WKSetApplicationInformationItem without blocking.

Canonical link: https://commits.webkit.org/161458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182366 268f45cc-cd09-0410-ab3c-d52691b4dbfc